--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -4,10 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+        <link rel="stylesheet" href="{% static 'myapp/styles.css' %}">
         <title>Document</title>
     </head>
-    <body>
+    <body class="bg-sky-500">
         <h1> This is index template</h1>
         <h4>
             <!-- <a href="/myapp/hello/{{ item.id }}/"></a> -->
