--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -7,8 +7,20 @@
         <link rel="stylesheet" href="{% static 'myapp/styles.css' %}">
         <title>Document</title>
     </head>
-    <body class="bg-sky-500">
-        <h1> This is index template</h1>
+    <body>
+        <nav>
+            <div>
+                <div>
+                    <div>
+                        <div class="flex">
+                            <img class="h-8 w-8" src="{% static 'myapp/images/book.png' %}" alt="logo"/>
+                            <span class="text-xl">ЕГЭ</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
+
         <h4>
             <!-- <a href="/myapp/hello/{{ item.id }}/"></a> -->
             {% for item in items %}
