--- a/mysite/myapp/templates/myapp/detail.html
+++ b/mysite/myapp/templates/myapp/detail.html
@@ -1,13 +1,9 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends "myapp/base.html" %}
+{% load static %}
+
+
+{% block content %}
     <h1>
-        This is detail page for : {{ item.name }}
+        Hi
     </h1>
-</body>
-</html>
+{% endblock content %}
