--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,31 +1,13 @@
 {% extends "myapp/base.html" %}
 {% load static %}
-{% block content %}
-        <nav class="bg-white shadow-lg">
-            <div class="max-w-6xl mx-auto px-4">
-                <div class="flex justify-between">
-                    <div class="flex space-x-7">
-                        <div>
-                            <a href="#" class="flex items-center px-2 py-4">
-                            <img class="h-8 w-8" src="{% static 'myapp/images/book.png' %}" alt="logo"/>
-                            <span class="text-gray-500 font-semibold text-xl">ЕГЭ</span>
-                          </a>
-                        </div>
-                        <div class="items-center flex space-x-1">
-                          <a href="#" class="py-4 px-2 text-gray-500 font-semibold border-b-4 border-green-500">Главная страница</a>
-                          <a href="#" class="py-4 px-2 text-gray-500 font-semibold">О сайте</a>
-                          <a href="#" class="py-4 px-2 text-gray-500 font-semibold">Контакты</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </nav>
 
+{% block content %}
         <h4>
             <!-- <a href="/myapp/hello/{{ item.id }}/"></a> -->
             {% for item in items %}
             <a href="{% url 'myapp:detail' item.id %}">
             ID: {{item.id}} | Имя: {{item.name}} | Возраст: {{item.age}} | {{item.description}} <br>
+                <img src="{{item.photo.url}}" alt="">
             </a>
             {% endfor %}
         </h4>
