--- a/mysite/myapp/templates/myapp/detail.html
+++ b/mysite/myapp/templates/myapp/detail.html
@@ -1,9 +1,14 @@
 {% extends "myapp/base.html" %}
 {% load static %}
-
+{% load humanize %}
 
 {% block content %}
-    <h1>
-        Hi
-    </h1>
+    <div class="flex p-10 w-full h-200">
+        <img class="w-1/3" src="{{ item.photo.url }}" alt="фото репетитора">
+        <div class="w-2/3 text-xl ml-10 mt-10">
+            <p class="mt-5">{{ item.name }}</p>
+            <p class="mt-5 text-gray-500">{{ item.age }} лет</p>
+            <p class="mt-5 text-gray-500">Стаж {{ item.experience | intcomma }} лет</p>
+        </div>
+    </div>
 {% endblock content %}
