--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -2,13 +2,28 @@
 {% load static %}
 
 {% block content %}
-        <h4>
-            <!-- <a href="/myapp/hello/{{ item.id }}/"></a> -->
-            {% for item in items %}
-            <a href="{% url 'myapp:detail' item.id %}">
-            ID: {{item.id}} | Имя: {{item.name}} | Возраст: {{item.age}} | {{item.description}} <br>
-                <img src="{{item.photo.url}}" alt="">
-            </a>
-            {% endfor %}
-        </h4>
+
+<main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
+    <div class="sm:text-center lg:text-left">
+        <h1 class="text-4xl font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
+            <span class="block xl:inline">Репетиторы по математике и информатике</span>
+            <span class="block xl:inline text-green-900">в Иркутске</span>
+        </h1>
+        <p class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">Мы можете найти наиболее подходяего репетитора</p>
+    </div>
+<div class="p-10 grid grid-cols-1 sm:grid-cols-1 md:grid-cols-3 xl:grid-col-3 lg:grid-col-3 fap-3">
+        {% for item in items %}
+        <a href="{% url 'myapp:detail' item.id %}">
+            <div class="rounded overflow-hidden shadow-lg">
+                <img class="w-[75px] h-[100px] mx-auto my-auto" src="{{item.photo.url}}" alt="">
+                <div class="px-6 py-4 w-[75px] h-[50px]">
+                    <p class="font-bold text-xl mb-2">{{item.name}}</p>
+                    <p class="font-bold text-xl text-green-500 mb-2">{{item.age}} лет</p>
+                    <p class="font-bold text-xl text-green-500 mb-2">Стаж {{item.experience}} лет</p>
+                </div>
+            </div>
+        </a>
+        {% endfor %}
+</div>
+</main>
 {% endblock content %}
