--- a/mysite/myapp/templates/myapp/detail.html
+++ b/mysite/myapp/templates/myapp/detail.html
@@ -1,7 +1,7 @@
 {% extends "myapp/base.html" %}
 {% load static %}
 {% load humanize %}
-
+{% block title %}{{ item.name }}{% endblock title %}
 {% block content %}
     <div class="flex p-10 w-full h-200">
         <img class="w-1/3" src="{{ item.photo.url }}" alt="фото репетитора">
