--- a/mysite/myapp/templates/myapp/index.html
+++ b/mysite/myapp/templates/myapp/index.html
@@ -1,6 +1,8 @@
 {% extends "myapp/base.html" %}
 {% load static %}
 
+{% block title %}Репетиторы{% endblock title %}
+
 {% block content %}
 
 <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
